force-app/main/default/objects/ddcdf__Dependency__c/ddcdf__Dependency__c.object-meta.xml
<CustomObject>
    <description>A new Dependency object is created for each data.com match.</description>
    <label>Dependency</label>
    <nameField>
        <label>Dependency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>