force-app/main/default/objects/ddcdf__Dependency__c/fields/ddcdf__API_Name__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__API_Name__c</fullName>
    <description>The API name of the metadata component that was matched.</description>
    <inlineHelpText>The API name of the metadata component that was matched.</inlineHelpText>
    <label>API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>