force-app/main/default/objects/ddcdf__Dependency__c/fields/ddcdf__Metadata_Link__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Metadata_Link__c</fullName>
    <description>By knowing the metadata type, a formula can generate a link to the metadata component in Salesforce, making it easy for an admin to inspect the component.</description>
    <formula>HYPERLINK(
    (LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) + ddcdf__Component_Id__c),
    ddcdf__Metadata__c, &quot;_self&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>By knowing the metadata type, a formula can generate a link to the metadata component in Salesforce, making it easy for an admin to inspect the component.</inlineHelpText>
    <label>Metadata Link</label>
    <type>Text</type>
</CustomField>