force-app/main/default/objects/ddcdf__Dependency__c/fields/ddcdf__Metadata_Status__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Metadata_Status__c</fullName>
    <description>The current status of the metadata.</description>
    <inlineHelpText>The current status of the metadata.</inlineHelpText>
    <label>Metadata Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Deleted</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>