force-app/main/default/objects/ddcdf__Dependency__c/fields/ddcdf__Scan__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Scan__c</fullName>
    <label>Scan</label>
    <referenceTo>ddcdf__Scan__c</referenceTo>
    <relationshipLabel>Dependencies</relationshipLabel>
    <relationshipName>Dependencies</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>