force-app/main/default/objects/ddcdf__Dependency__c/fields/ddcdf__Standard__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Standard__c</fullName>
    <description>Indicates whether or not a metadata component is a standard component on the platform, or a custom component that was added.</description>
    <inlineHelpText>Indicates whether or not a metadata component is a standard component on the platform, or a custom component that was added.</inlineHelpText>
    <label>Standard</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Native</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Managed Package</fullName>
                <isActive>false</isActive>
                <label>Managed Package</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>