force-app/main/default/objects/ddcdf__Dependency__c/fields/ddcdf__Status__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Status__c</fullName>
    <description>1) Dependency: The default value
2) Resolved: Allows an admin to manually resolve an issue and flag it accordingly</description>
    <inlineHelpText>Allows an admin to manually resolve an issue and flag it accordingly</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dependency</fullName>
                <default>true</default>
                <label>Dependency</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>